fix display of underlying alternative text for ucp_pm_viewfolder (used li instead of div) as well as hiding overflow text.
git-svn-id: file:///svn/phpbb/trunk@8235 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/theme/buttons.css
+++ b/phpBB/styles/prosilver/theme/buttons.css
@@ -24,12 +24,13 @@
 	height: 100%;
 	background-position: 0 0;
 	position: relative;
+	overflow: hidden;
 }
 
 /* Hide <a> text and hide off-state image when rolling over (prevents flicker in IE) */
 /*.buttons div span		{ display: none; }*/
 /*.buttons div a:hover	{ background-image: none; }*/
-.buttons div span			{ position: absolute; width: 100%; height: 100%; cursor: pointer; }
+.buttons div span			{ position: absolute; width: 100%; height: 100%; cursor: pointer;}
 .buttons div a:hover span	{ background-position: 0 100%; }
 
 /* Big button images */
